changed homepage url package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://arhammalyk.github.io/TeachTraverser",
+  "homepage": "https://arhammalyk.github.io/TeachTraversers",
   "name": "techtraversers",
   "version": "0.1.0",
   "private": true,
